[gd_scene load_steps=3 format=3 uid="uid://bcy18vd23cgvt"]

[ext_resource type="Script" path="res://Items/Weapons/Gun.gd" id="1_b3ilq"]
[ext_resource type="PackedScene" uid="uid://duct7fde7hepc" path="res://Items/Weapons/GunSightDot.tscn" id="2_8owft"]

[node name="Gun" type="RigidBody2D"]
script = ExtResource("1_b3ilq")
gun_sight = 1

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="MuzzleNode2D" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(14, 1)
target_position = Vector2(350, 0)
collision_mask = 29
collide_with_areas = true

[node name="GunSightDot" parent="." instance=ExtResource("2_8owft")]

[node name="PrimaryFireTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SecondaryFireTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
editor_description = "How long a reload takes before the gun can be fired again."
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="PrimaryFireTimer" to="." method="_on_primary_fire_timer_timeout"]
[connection signal="timeout" from="SecondaryFireTimer" to="." method="_on_secondary_fire_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
